test_data/Xml/Unexpected/Unserializable/InvalidClassName/submodelElementCollection/wrong.xml.exception
Expected an element representing an instance of class SubmodelElementCollection with element name submodelElementCollection, but got: utterlyInvalid at: the beginning